add_executable(NoShame
    src/main.cpp
    src/mainwindow.cpp
    src/mainwindow.h
    src/mainwindow.ui
    src/renderarea.cpp
    src/renderarea.h
    src/menumodel.cpp
    src/menumodel.h
    src/aboutwindow.cpp
    src/aboutwindow.h
    src/aboutwindow.ui
    src/tableview.cpp
    src/tableview.h
    src/categoryfilterproxymodel.cpp
    src/categoryfilterproxymodel.h
    src/nutrients.cpp
    src/nutrients.h
    src/nutrients.ui
)
target_link_libraries(NoShame Qt5::Widgets)
